--- a/.github/workflows/testfeatures.yml
+++ b/.github/workflows/testfeatures.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test_features:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: checkout files
         uses: actions/checkout@v2
