--- a/.github/workflows/testfeatures.yml
+++ b/.github/workflows/testfeatures.yml
@@ -11,5 +11,4 @@ jobs:
         uses: actions/checkout@v2
       - run: |
           echo hello from the testing script
-          npm install chai
-          node level1.js
+          npm install --save-dev chai
