--- a/.github/workflows/testfeatures.yml
+++ b/.github/workflows/testfeatures.yml
@@ -1,6 +1,7 @@
 name: feature testing
 
 on:
+  push:
   workflow_dispatch:
 
 jobs:
@@ -16,6 +17,7 @@ jobs:
       - run: |
           echo hello from the testing script
           cat package.json
-          npm install --save-dev chai
+          npm install chai
           node --version
+          cat node_modules/chai/chai.js
           node level1.js
