--- a/.github/workflows/testfeatures.yml
+++ b/.github/workflows/testfeatures.yml
@@ -17,7 +17,7 @@ jobs:
       - name: install node_modules
         run: |
           ls -la
-          npm init
+          npm install
           ls -la
           ls node_modules
 
