--- a/.github/workflows/test-features.yml
+++ b/.github/workflows/test-features.yml
@@ -10,21 +10,16 @@ jobs:
     steps:
       - name: checkout files
         uses: actions/checkout@v2
+
       - name: setup node.js
         uses: actions/setup-node@v2
         with:
           node-version: 20.10.0
+
       - name: install node_modules
         run: |
-          ls -la
           npm install
-          ls -la
-          ls node_modules
+          
+      - name: test levels
+        run: |
           node level1.js
-
-          # echo hello from the testing script
-          # cat package.json
-          # npm install chai
-          # node --version
-          # # cat node_modules/chai/chai.js
-          # node level1.js
