Update yml file with level 5 files

--- a/.github/workflows/install-application.yml
+++ b/.github/workflows/install-application.yml
@@ -41,6 +41,9 @@ jobs:
           scp level3.js root@www.walsh-jumper.com:site
           scp level4.html root@www.walsh-jumper.com:site
           scp level4.js root@www.walsh-jumper.com:site
+          scp level5.html root@www.walsh-jumper.com:site
+          scp level5.js root@www.walsh-jumper.com:site
+          scp glimmer.css root@www.walsh-jumper.com:site
           scp package-lock.json root@www.walsh-jumper.com:site
           scp package.json root@www.walsh-jumper.com:site
           scp -r img root@www.walsh-jumper.com:site
